[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bettyng"
version = "0.1.0"
authors = [
    {name="Roman Alberto Velez Jimenez", email="roman.velez.jimenez@gmail.com" }
]
description = "Python package to generate betting portfolios"
requires-python = ">=3.9"
license = "MIT"
keywords = ["python", "package"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages]
find = {}
